--- a/steps/aws/cmd/manifest.yaml
+++ b/steps/aws/cmd/manifest.yaml
@@ -1,7 +1,7 @@
 apiVersion: stackpulse.io/v1
 kind: Step
 metadata:
-  name: "aws-cli-command"
+  name: "aws_cli_command"
   imageName: "amazon/aws-cli"
   description: "Generic AWS CLI command"
   vendor: aws
