--- a/steps/elastic/nodes-stats/manifest.yaml
+++ b/steps/elastic/nodes-stats/manifest.yaml
@@ -1,7 +1,7 @@
 apiVersion: stackpulse.io/v1
 kind: Step
 metadata:
-  name: "elastic-nodes-stats"
+  name: "elastic_nodes_stats"
   description: "Get elastic nodes stats."
   vendor: elastic
   type: triage
