--- a/steps/aws/describe-instances/manifest.yaml
+++ b/steps/aws/describe-instances/manifest.yaml
@@ -1,7 +1,7 @@
 apiVersion: stackpulse.io/v1
 kind: Step
 metadata:
-  name: "aws-describe-instances"
+  name: "aws_describe_instances"
   imageName: "amazon/aws-cli"
   description: "Describe AWS instances."
   vendor: aws
