--- a/steps/elastic/cluster-health/manifest.yaml
+++ b/steps/elastic/cluster-health/manifest.yaml
@@ -1,7 +1,7 @@
 apiVersion: stackpulse.io/v1
 kind: Step
 metadata:
-  name: "elastic-cluster-health"
+  name: "elastic_cluster_health"
   description: "Get elastic cluster health."
   vendor: elastic
   type: triage
