start migrating circleci config, adding a yaml linting support and start fixing lint comments

--- a/steps/aws/attach-volume/manifest.yaml
+++ b/steps/aws/attach-volume/manifest.yaml
@@ -29,7 +29,7 @@ args:
     required: true
     default: "{{ .instanceID }}"
   - name: --device
-    description: "device name to use"
+    description: "device name to use."
     type: "string"
     required: true
     default: "/dev/sdf"
