--- a/steps/azure/cli/manifest.yaml
+++ b/steps/azure/cli/manifest.yaml
@@ -3,7 +3,7 @@ kind: Step
 metadata:
   name: "azure_cli_command"
   imageName: "microsoft/azure-cli"
-  description: "Run commands on Azure environment using azure cli"
+  description: "Run commands on Azure environment using azure cli."
   vendor: azure
   type: advanced
 
