--- a/steps/elastic/nodes-stats/manifest.yaml
+++ b/steps/elastic/nodes-stats/manifest.yaml
@@ -24,7 +24,7 @@ envs:
     type: "string"
     required: false
   - name: CERT_CONTENT
-    description: "SSL certificate conten.t"
+    description: "SSL certificate content."
     type: "string"
     required: false
   - name: CERT_KEY_CONTENT
