--- a/steps/gcloud/gcloud-cli/manifest.yaml
+++ b/steps/gcloud/gcloud-cli/manifest.yaml
@@ -3,13 +3,13 @@ kind: Step
 metadata:
   name: "gcp_cli_command"
   imageName: "us-docker.pkg.dev/stackpulse/public/gcloud/gcloud-cli"
-  description: "Perform actions on Google Cloud Platform with StackPulse GCP Integration"
+  description: "Perform actions on Google Cloud Platform with StackPulse GCP Integration."
   vendor: gcp 
   type: advanced
 
 envs:
   - name: PROJECT_ID
-    description: "String containing the name of the Google Cloud Platform project"
+    description: "String containing the name of the Google Cloud Platform project."
     type: "string"
     required: true
     default: "MyProject"
