--- a/steps/istio/proxy-status/manifest.yaml
+++ b/steps/istio/proxy-status/manifest.yaml
@@ -16,7 +16,7 @@ envs:
     type: "bool"
     required: false
   - name: ISTIO_NAMESPACE
-    description: "Istio system namespace (default\: istio-system)"
+    description: "Istio system namespace (default\\: istio-system)."
     type: "string"
     required: false
   - name: CONTEXT
@@ -28,7 +28,7 @@ envs:
     type: "string"
     required: false
   - name: POD
-    description: "Specific Pod to query\: [<pod-name[.namespace]>]."
+    description: "Specific Pod to query\\: [<pod-name[.namespace]>]."
     type: "string"
     required: false
 
